# visual-persuasion

./: .gitignore  README.md  pyproject.toml  test.py
analysis/: README.md  choice_distilled.R  choice_head2head.R  choice_human.R  choice_main.R  choice_mitigations.R  image_analysis.R  requirements.txt  utils.R
analysis/autointerp/: run_autointerp.py
analysis/similarity_analysis/: __init__.py  run_everything.py  s3_image_store.py  sim_utils.py
nudging/: analyze.py  api.py  baseline_feedback_descent.py  baseline_textgrad.py  compare_methods.py  competition.py  competition_combined.py  competition_no_bias.py  competition_selector.py  competition_simplified.py  competition_ui.py  config.py  distillation.py  evaluate.py  evaluate_autointerp.py  evaluate_chain.py  evaluate_mitigations.py  evaluate_no_bias.py  evaluate_pairs.py  evaluate_solo.py  evaluate_solutions.py  evaluate_ui.py  feedback_descent.py  formula.py  interp.py  interpret_results.py  main.py  map_elites.py  models.py  nudge.py  nudges.py  optimization.py  priors.py  prompt_optimization.py  requirements.txt  run_analysis.py  run_competition.py  run_evaluation.py  run_interp.py  run_interpret.py  (+9 more)
nudging/conf/: config.yaml
nudging/conf/evaluate/: ui.yaml  (+8 more)
nudging/utils/: misc.py
scripts/: analyze_attribute_correlations.py  analyze_chain.py  analyze_choices.py  analyze_methods.py  analyze_priors.py  analyze_product_images.py  analyze_prolific_results.py  analyze_ui_results.py  collect_product_priors.py  collect_product_priors_pairs.py  combine_results.py  combine_results_methods.py  combine_results_mitigations.py  combine_results_pairs.py  combine_results_solutions.py  combine_results_strategies.py  evaluate_chain.py  generate_prolific_across_strategies.py  generate_prolific_mitigations.py  generate_prolific_survey.py  generate_prolific_within_strategy.py  process_qualtrics_results.py  sample_abod.py  sample_constraint_pairs.py  sample_hotels.py  sample_housing.py
setup/: api.py  background.py  config.py  enhance.py  main.py  models.py  requirements.txt  run_standardization.py  schema.py  standardize.py  strategy.py  wrappers.py
setup/conf/: config.yaml
shared/: __init__.py  api.py  misc.py  models.py  wrappers.py
utils/: __init__.py  api.py  features.py  models.py  wrappers.py
visualpersuasion/: config.py  schema.py
(+103 files in other folders)
