[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-nudging"
version = "0.1.0"
description = "Visual nudging framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.0",
    "litellm>=1.40.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["utils*", "nudging*", "setup*"]

[tool.setuptools.package-data]
nudging = ["conf/**/*.yaml"]
setup = ["conf/**/*.yaml"]