[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visualpersuasion"
version = "0.1.0"
description = "Visual Persuasion: What Influences Decisions of Vision-Language Models?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.0",
    "litellm>=1.40.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.3.3",
    "fastembed>=0.2.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "google-genai>=0.2.0",
    "boto3>=1.42.31",
    "textgrad>=0.1.8"
]

[tool.setuptools.packages.find]
include = ["visualpersuasion*", "scripts*"]

[tool.setuptools.package-data]
visualpersuasion = ["conf/**/*.yaml"]