[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visualpersuasion"
version = "0.1.0"
description = "Visual Persuasion: What Influences Decisions of Vision-Language Models?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core==1.3.2",
    "litellm==1.77.5",
    "pillow==11.3.0",
    "pydantic==2.12.5",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "python-dotenv==1.2.1",
    "pandas==3.0.0",
    "fastembed==0.7.4",
    "scikit-learn==1.8.0",
    "tqdm==4.67.3",
    "rich==14.3.2",
    "google-genai==1.63.0",
    "boto3==1.42.49",
    "textgrad==0.1.8"
]

[tool.setuptools.packages.find]
include = ["visualpersuasion*", "scripts*"]

[tool.setuptools.package-data]
visualpersuasion = ["conf/**/*.yaml"]